# coursera-ai-for-medicine-specialization

./: pyproject.toml
AI for Medical Diagnosis/Week 1/: C1W1_A1_Chest X-Ray Medical Diagnosis with Deep Learning.ipynb  C1W1_L1_Data Exploration & Image Pre-Processing.ipynb  C1W1_L2_Counting labels and weighted loss function.ipynb  C1W1_L3_Densenet.ipynb  C1W1_L4_Patient Overlap - practice.ipynb  util.py
AI for Medical Diagnosis/Week 2/: C1W2_A1_Evaluation of Diagnostic Models.ipynb  util.py
