[tool.poetry]
name = "coursera-ai-for-medicine-specialization"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "coursera_ai_for_medicine_specialization"}]

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.18.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
seaborn = "^0.13.2"
keras = "^3.6.0"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
